test/badReverse.slq
// skipped
// TODO: allow regression tester to test this

def main(){
	x:=H(0:ğ”¹);
	y:=reverse(dup[ğ”¹])(0:ğ”¹,x:ğ”¹); // error: bad forget
}
